[project]
name = "ai-agent-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=0.3.79",
    "langchain-ollama>=0.3.10",
    "langchain-openai>=0.3.35",
    "langgraph>=1.0.1",
    "ollama>=0.6.0",
    "pydantic>=2.12.0",
    "pyyaml>=6.0.3",
    "tavily-python>=0.7.23",
    "uvicorn[standard]>=0.44.0",
]
[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
